Added parallax classes and made a basic webpage

--- a/app/views/index.erb
+++ b/app/views/index.erb
@@ -1,26 +1,62 @@
-<div class="parallax">
-  <div class="parallax__layer parallax__layer--back">
-    Dalston
-    <br>
-    <img src=http://upload.wikimedia.org/wikipedia/commons/7/71/Dalston_dereliction_1.jpg>
+<!-- <div class="debug">
+    <label><input type="checkbox"> Debug</label>
   </div>
-  <div class="parallax__layer parallax__layer--base">
-    Finsbury Park
-    <br>
-    <img src=http://upload.wikimedia.org/wikipedia/commons/7/71/Dalston_dereliction_1.jpg>
-  </div>
-</div>
-<div class="parallax">
-  <div class="parallax__layer parallax__layer--back">
-    Dalston
-    <br>
-    <img src=http://www.livincool.com/wp-content/uploads/2010/01/a-friday-night-at-dalston-superstore-33.jpg>
-  </div>
-  <div class="parallax__layer parallax__layer--base">
-    Finsbury Park
-    <br>
-    <img src=http://www.livincool.com/wp-content/uploads/2010/01/a-friday-night-at-dalston-superstore-33.jpg>
-  </div>
-</div>
+  <div class="demo__info">
+    Pure CSS parallax scroll project by Louise Beh and Loris Fochesato.
+  </div> -->
 
+  <div class="parallax">
 
+    <div id="group1" class="parallax__group">
+      <div class="parallax__layer parallax__layer--base">
+        <div class="title">Welcome to London!</div>
+      </div>
+    </div>
+
+    <div id="group2" class="parallax__group">
+      <div class="parallax__layer parallax__layer--base">
+        <div class="title">Dalston</div>
+      </div>
+
+      <div class="parallax__layer parallax__layer--back">
+      </div>
+    </div>
+
+    <div id="group3" class="parallax__group">
+      <div class="parallax__layer parallax__layer--fore">
+        <div class="title">Finsbury Park</div>
+      </div>
+      <div class="parallax__layer parallax__layer--base">
+      </div>
+    </div>
+
+    <div id="group4" class="parallax__group">
+      <div class="parallax__layer parallax__layer--base">
+        <div class="title">Camden</div>
+      </div>
+      <div class="parallax__layer parallax__layer--deep">
+      </div>
+    </div>
+
+    <div id="group5" class="parallax__group">
+      <div class="parallax__layer parallax__layer--fore">
+        <div class="title">Notting Hill</div>
+      </div>
+      <div class="parallax__layer parallax__layer--base">
+      </div>
+    </div>
+
+    <div id="group6" class="parallax__group">
+      <div class="parallax__layer parallax__layer--back">
+        <div class="title">Chelsea</div>
+      </div>
+      <div class="parallax__layer parallax__layer--base">
+      </div>
+    </div>
+
+    <div id="group7" class="parallax__group">
+      <div class="parallax__layer parallax__layer--base">
+      </div>
+    </div>
+
+  </div>
