Added: 1.Header, 2.Borough descriptions

--- a/app/views/index.erb
+++ b/app/views/index.erb
@@ -10,12 +10,14 @@
     <div id="group1" class="parallax__group">
       <div class="parallax__layer parallax__layer--base">
         <div class="title">Welcome to London!</div>
+            <div class="description"> London is the capital and most populous city of England and the United Kingdom. Standing on the River Thames, London has been a major settlement for two millennia, its history going back to its founding by the Romans, who named it Londinium. Wikipedia</div>
       </div>
     </div>
 
     <div id="group2" class="parallax__group">
       <div class="parallax__layer parallax__layer--base">
         <div class="title">Dalston</div>
+        <div class="description"> Dalston is a district of north-east London, England, located in the London Borough of Hackney. It is situated 3.5 miles northeast of Charing Cross. The area is identified in the London Plan as one of 35 major centres in Greater London. Wikipedia</div>
       </div>
 
       <div class="parallax__layer parallax__layer--back">
@@ -25,6 +27,8 @@
     <div id="group3" class="parallax__group">
       <div class="parallax__layer parallax__layer--fore">
         <div class="title">Finsbury Park</div>
+        <div class="description"> Finsbury Park is a 110-acre public park in the London Borough of Haringey. Within the ward of the London neighbourhood of Harringay, Finsbury Park is in the area for centuries covered by the historic ... Wikipedia
+        </div>
       </div>
       <div class="parallax__layer parallax__layer--base">
       </div>
@@ -33,6 +37,7 @@
     <div id="group4" class="parallax__group">
       <div class="parallax__layer parallax__layer--base">
         <div class="title">Camden</div>
+        <div class="description"> The London Borough of Camden is a borough of London, England, which forms part of Inner London. The southern reaches of Camden form part of central London. The local authority is Camden London Borough Council. Wikipedia</div>
       </div>
       <div class="parallax__layer parallax__layer--deep">
       </div>
@@ -41,6 +46,7 @@
     <div id="group5" class="parallax__group">
       <div class="parallax__layer parallax__layer--fore">
         <div class="title">Notting Hill</div>
+        <div class="description"> Notting Hill is a district in the Royal Borough of Kensington and Chelsea in central London.[1] It is a cosmopolitan district known as the location for the annual Notting Hill Carnival, and for being home to the Portobello Road Market. Wikipedia</div>
       </div>
       <div class="parallax__layer parallax__layer--base">
       </div>
@@ -49,6 +55,7 @@
     <div id="group6" class="parallax__group">
       <div class="parallax__layer parallax__layer--back">
         <div class="title">Chelsea</div>
+        <div class="description"> Chelsea is an affluent area in central London,[1] bounded to the south by the River Thames. Its frontage runs from Chelsea Bridge along the Chelsea Embankment, Cheyne Walk, Lots Road and Chelsea Harbour. Its eastern boundary was once defined by the River Westbourne, which is now in a pipe above Sloane Square tube station. The modern eastern boundary is Chelsea Bridge Road and the lower half of Sloane Street, including Sloane Square. To the north and northwest, the area fades into Knightsbridge and Brompton, but it is safe to say that the area north of King's Road as far northwest as Fulham Road is part of Chelsea. The football club Chelsea F.C. could reasonably be considered to be based in Chelsea, despite being located in the London Borough of Hammersmith and Fulham.</div>
       </div>
       <div class="parallax__layer parallax__layer--base">
       </div>
