--- a/app/views/layout.erb
+++ b/app/views/layout.erb
@@ -11,6 +11,15 @@
 
   <body>
 
+  <header>
+    <div id="logo"><a href='/' id='logo'>London Boroughs</a></div>
+    <div class="borough"><a href='/#group2' class='borough'>Dalston</a></div>
+    <div class="borough"><a href='/#group3' class='borough'>Finsbury Park</a></div>
+    <div class="borough"><a href='/#group4' class='borough'>Camden</a></div>
+    <div class="borough"><a href='/#group5' class='borough'>Notting Hill</a></div>
+    <div class="borough"><a href='/#group6' class='borough'>Chelsea</a></div>
+  </header>
+
   <%= yield %>
 
   </body>
