--- a/app/public/css/application.css
+++ b/app/public/css/application.css
@@ -1,3 +1,34 @@
+/* Header styles
+  --------------------------------------------- */
+
+header > * {
+    margin: auto 0;
+  }
+
+header {
+  position: static;
+  height: 100px;
+  background-color: rgba(255, 49, 47, 0.8);
+  color: white;
+  padding: 0 20px;
+  display: flex;
+}
+
+header #logo {
+  margin: auto 0;
+  color: white;
+  text-decoration: none;
+  display: flex;
+}
+
+header #borough {
+  margin: auto 0;
+  vertical-align: right;
+  color: white;
+  text-decoration: none;
+  display: flex;
+}
+
 /* Parallax base styles
   --------------------------------------------- */
 
@@ -58,12 +89,12 @@
     background: rgba(0,0,0,.85);
     color: #fff;
     padding: .5em;
-    border-radius: 0 0 5px 5px;
-  }
+    border-radius: 0 0 5px 5px;*/
+  /*}*/
   .debug-on .parallax__group {
     -webkit-transform: translate3d(800px, 0, -800px) rotateY(30deg);
     transform: translate3d(700px, 0, -800px) rotateY(30deg);
- }*/
+ }
   .debug-on .parallax__layer {
     box-shadow: 0 0 0 2px #000;
     opacity: 0.9;
@@ -95,18 +126,29 @@
     text-align: center;
     position: absolute;
     left: 50%;
-    top: 50%;
+    top: 25%;
     -webkit-transform: translate(-50%, -50%);
     transform: translate(-50%, -50%);
     color: #FF0000;
     font-size: 250%;
   }
 
+  .description {
+    /*text-align: center;*/
+    position: absolute;
+    left: 50%;
+    top: 55%;
+    -webkit-transform: translate(-50%, -50%);
+    transform: translate(-50%, -50%);
+    color: white;
+    font-size: 80%;
+  }
+
   #group1 {
     z-index: 5; /* slide over group 2 */
   }
   #group1 .parallax__layer--base {
-    background: url("http://www.the-so.com/images/test4.jpg");
+    background-image: url("http://www.the-so.com/images/test4.jpg");
   }
 
   #group2 {
