--- a/app/views/layout.erb
+++ b/app/views/layout.erb
@@ -13,11 +13,13 @@
 
   <header>
     <div id="logo"><a href='/' id='logo'>London Boroughs</a></div>
-    <div class="borough"><a href='/#group2' class='borough'>Dalston</a></div>
-    <div class="borough"><a href='/#group3' class='borough'>Finsbury Park</a></div>
-    <div class="borough"><a href='/#group4' class='borough'>Camden</a></div>
-    <div class="borough"><a href='/#group5' class='borough'>Notting Hill</a></div>
-    <div class="borough"><a href='/#group6' class='borough'>Chelsea</a></div>
+    <center>
+    <a href='/#group2' class='button'>Dalston</a>
+    <a href='/#group3' class='button2'>Finsbury Park</a>
+    <a href='/#group4' class='button'>Camden</a>
+    <a href='/#group5' class='button'>Notting Hill</a>
+    <a href='/#group6' class='button'>Chelsea</a>
+    </center>
   </header>
 
   <%= yield %>
